Fixed spacing issues with body

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@ body {
     background-color: hsl(212, 45%, 89%);
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .qr-container {
@@ -18,8 +17,7 @@ body {
     align-content: center;
     justify-content: center;
     background-color: hsl(0, 0%, 100%);
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 5%;
     gap: 5%;
     width:  30%;
     padding: 0.5%;
